--- a/agent-app/src/main/resources/application.properties
+++ b/agent-app/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #optimizacija za postgres upite
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+cors.origin=${CORS_ORIGIN:http://localhost:5030}
