feat: updated data

--- a/agent-app/src/main/resources/application.properties
+++ b/agent-app/src/main/resources/application.properties
@@ -23,3 +23,15 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
 cors.origin=${CORS_ORIGIN:http://localhost:5030}
+
+spring.jpa.properties.hibernate.jdbc.batch_size=500
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.generate_statistics=false
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data = true
+spring.jpa.show-sql = true
+
+#spring.jpa.generate-ddl = false
+#spring.jpa.hibernate.ddl-auto = none
+#spring.jpa.properties.hibernate.cache.use_second_level_cache = false
+#spring.jpa.properties.hibernate.cache.use_query_cache = false
