--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,24 @@ jobs:
 
       - name: Build with Maven
         run: mvn package --file agent-app/pom.xml -DskipTests
+        
+      - name: Cache node_modules
+        id: cache
+        uses: actions/cache@v2.1.0
+        with:
+          path: node_modules
+          key: ubuntu-latest-node-v16-deps-${{ hashFiles(format('{0}{1}', github.workspace, '/agent-fe/package-lock.json')) }}
+        
+      - name: Install dependencies frontend
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+            cd agent-fe
+            npm install
+            
+      - name: Build frontend
+        run: |
+            cd agent-fe 
+            npm run build
 
       - name: Set Up QEMU
         uses: docker/setup-qemu-action@v2
@@ -96,3 +114,36 @@ jobs:
         with:
           name: agent-app-build-${{ steps.clean_version.outputs._1 }}.jar
           path: target/*.jar
+          
+      - name: Docker build frontend
+        id: docker_build_frontend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./agent-fe
+          push: false
+          secrets: |
+            GIT_AUTH_TOKEN = ${{ secrets.GITHUB_TOKEN }}
+          builder: ${{ steps.buildx.outputs.name }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/agent-fe:${{ steps.clean_version.outputs._1 }}
+          load: true
+
+      - name: Docker push frontend
+        id: docker_push_frontned
+        uses: docker/build-push-action@v2
+        with:
+          context: ./agent-fe
+          push: true
+          secrets: |
+            GIT_AUTH_TOKEN = ${{ secrets.GITHUB_TOKEN }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/agent-fe:${{ steps.clean_version.outputs._1 }}
+
+      - name: Upload image frontend
+        uses: ishworkh/docker-image-artifact-upload@v1
+        with:
+          image: ${{ secrets.DOCKER_USERNAME }}/agent-fe:${{ steps.clean_version.outputs._1 }}
+
+      - name: Upload Artifact frontend
+        uses: actions/upload-artifact@v3
+        with:
+          name: agent-fe-${{ steps.clean_version.outputs._1 }}
+          path: dist
