--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,15 +60,18 @@ jobs:
       - name: Get npm cache directory
         id: npm-cache-dir
         run: |
-          - uses: actions/cache@v3
-            id: npm-cache
-            with:
-              path: ${{ steps.npm-cache-dir.outputs.dir }}
-              key: ${{ runner.os }}-node-v-${{ hashFiles('**/package-lock.json') }}
-              restore-keys: |
-                ${{ runner.os }}-node-
-          - name: Remove node modules
-            run: git rm -r --cached node_modules
+          echo "::set-output name=dir::$(npm config get cache)"
+
+      - uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-v-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Remove node modules
+        run: git rm -r --cached node_modules
 
       - name: Install dependencies
         if: steps.npm-cache.outputs.cache-hit != 'true'
