--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,24 +57,9 @@ jobs:
 #          key: ${{ runner.os }}-node-v1-${{ hashFiles('**/package-lock.json') }}
 #          restore-keys: |
 #            ${{ runner.os }}-node-
-      - name: Get npm cache directory
-        id: npm-cache-dir
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-
-      - uses: actions/cache@v3
-        id: npm-cache
-        with:
-          path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-v-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Remove node modules
-        run: git rm -rf ./agent-fe/node_modules
 
       - name: Install dependencies
-        if: steps.npm-cache.outputs.cache-hit != 'true'
+#        if: steps.npm-cache.outputs.cache-hit != 'true'
         run: |
             cd agent-fe
             npm install
