--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,11 @@ jobs:
         with:
           node-version: 16
 
+      - name: Remove node modules
+        run: |
+          cd agent-fe
+          git rm -rf node_modules
+
       - name: Get npm cache directory
         id: npm-cache-dir
         run: |
